Formulario para reservas de habitaciones

--- a/index.html
+++ b/index.html
@@ -10,4 +10,5 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
+  <script src="https://kit.fontawesome.com/9295e4d156.js" crossorigin="anonymous"></script>
 </html>
